# anima-lora-trainer

./: .gitignore  0_dataset_server.py  0_dedup_raw.py  0_process_raw.py  0a_dedup_raw.py  1_dataset_server.py  1_tag_dataset.py  2_make_config.py  2_run_training.sh  2_run_training_2gpu.sh  2_run_training_4gpu.sh  3_run_training.sh  3_run_training_2gpu.sh  3_run_training_4gpu.sh  3_sweep_grid.py  4_sweep_grid.py  README.md  app.py  blacklist.txt  config.env.example  config.trigger.env.example  config_model.env.example  dedup.py  main.py  pyproject.toml  samples.txt
dataset/: trigger_tag.toml
dataset_raw/: PROCESS_RAW.md  README.md
src/: __init__.py  configgen.py  dedup.py  paths.py  tagging.py
src/webui/: __init__.py  server.py
src/webui/static/: index.html
text/: anima_resp.md
